# mcp-noctua

./: .env.example  .gitignore  LICENSE  README.fr.md  README.md  docker-compose.toolbox.yml  pyproject.toml  requirements.txt  start_server.sh
docs/: design.md
src/: allowlist.py  config.py  errors.py  main.py  server.py  toolbox.py  workflows.py
tests/: test_allowlist.py  test_config.py  test_server.py  test_toolbox.py  test_workflows.py
